--- a/Week2/docker-compose.yml
+++ b/Week2/docker-compose.yml
@@ -6,7 +6,8 @@ volumes:
 
 services:
   postgres:
-    image: postgres
+    image: postgres:17-alpine 
+    # postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
@@ -18,6 +19,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 10
+    ports:
+      "5432:5432"
 
   kestra:
     image: kestra/kestra:latest
