--- a/Week2/docker-compose.yml
+++ b/Week2/docker-compose.yml
@@ -6,8 +6,7 @@ volumes:
 
 services:
   postgres:
-    image: postgres:17-alpine 
-    # postgres
+    image: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
@@ -19,8 +18,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 10
-    ports:
-      - "5432:5432"
 
   kestra:
     image: kestra/kestra:latest
@@ -43,6 +40,7 @@ services:
             username: kestra
             password: k3str4
         kestra:
+
           server:
             basicAuth:
               enabled: false
@@ -56,6 +54,8 @@ services:
               basePath: "/app/storage"
           queue:
             type: postgres
+          tutorial-flows:
+            enabled: false
           tasks:
             tmpDir:
               path: /tmp/kestra-wd/tmp
