--- a/Week2/docker-compose.yml
+++ b/Week2/docker-compose.yml
@@ -6,7 +6,7 @@ volumes:
 
 services:
   postgres:
-    image: postgres
+    image: postgres:latest
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
